Fix safari overflow hiding toolbar text issue.

--- a/angular/src/app/nav/nav.component.scss
+++ b/angular/src/app/nav/nav.component.scss
@@ -49,8 +49,9 @@
     }
 
     .toolbar-item {
-        margin: -15px 0 0 12px;
+        margin: 0 0 0 12px;
         width: 46px;
+        height: 56px;
 
         .title {
             margin-top: -15px;
